(fix) 사용자 입장에서 설문조사 리스트 형태 변경 완료